[delete] buildSrcを削除